--- a/livecoding/NAMESPACE
+++ b/livecoding/NAMESPACE
@@ -3,6 +3,7 @@
 export(join)
 export(livecode)
 importFrom(httr,DELETE)
+importFrom(httr,GET)
 importFrom(httr,PATCH)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
